syntax = "proto3";

import "erp/invoice/InvoiceEntity.proto";
import "BaseEntity.proto";
package b2b.erp.invoice;
option java_multiple_files = true;
option java_package = "com.usoft.b2b.external.erp.invoice.api.protobuf";

service IInvoiceService {
    //买家ERP-将ERP的应付发票写到平台 -restAPI /erp/purchase/APBill, method:post, type:json
    rpc saveApBills (SaveApBillsReq) returns (SaveApBillsResp);

    //卖家ERP-从平台获取未下载的客户应付票据 -restAPI /erp/sale/APBill, method:get, type:kv
    rpc getSaleAPBills (GetSaleAPBillsReq) returns (GetSaleAPBillsResp);
    //平台的客户应付票据传到供应商ERP之后，修改平台里面的客户应付票据的上传状态 -restAPI /erp/sale/APBill, method:post, type:string
    rpc onSaleAPBillDownSuccess(OnSaleAPBillDownSuccessReq) returns (OnSaleAPBillDownSuccessResp);
}

//买家ERP-将ERP的应付发票写到平台 请求参数
message SaveApBillsReq {
    repeated APBill data = 1; //应付票据单
}
//买家ERP-将ERP的应付发票写到平台 响应参数
message SaveApBillsResp {
    RespHeader respHeader = 1; // 响应体
    repeated APBill data = 2; //应付票据单
}
//卖家ERP-从平台获取未下载的客户应付票据
message GetSaleAPBillsReq {

}
//卖家ERP-从平台获取未下载的客户应付票据
message GetSaleAPBillsResp {
    repeated APBill data = 1; //应付票据单
}
//平台的客户应付票据传到供应商ERP之后，修改平台里面的客户应付票据的上传状态 请求参数
message OnSaleAPBillDownSuccessReq {
    string idStr = 1; //APBill的ab_b2bid
}

//平台的客户应付票据传到供应商ERP之后，修改平台里面的客户应付票据的上传状态 响应参数
message OnSaleAPBillDownSuccessResp {
    RespHeader respHeader = 1; // 响应体
}