syntax = "proto3";

import "BaseEntity.proto";
package b2b.erp.invoice;
option java_multiple_files = true;
option java_package = "com.usoft.b2b.external.erp.invoice.api.entity";

//ERP应付票据单
message APBill {
    int64 ab_id = 1;
    string ab_code = 2;
    int64 ab_date = 3;//时间戳
    int64 ab_yearmonth = 4;
    string ab_currency = 5;
    double ab_rate = 6;
    string ab_buyer = 7;
    int64 ab_vendoruu = 8;
    string ab_status = 9;
    string ab_payments = 10;
    int64 ab_paydate = 11;//时间戳
    string ab_refno = 12;
    string ab_recorder = 13;
    int64 ab_indate = 14;//时间戳
    double ab_apamount = 15;
    double ab_payamount = 16;
    string ab_pricetermdes = 17;
    double ab_taxsum = 18;
    double ab_differ = 19;
    string ab_remark = 20;
    int64 ab_b2bid = 21;
    int64 ab_customeruu = 22;
    repeated APBillDetail details = 23;
}
//ERP应付票据单明细
message APBillDetail {
    int32 abd_detno = 1;
    string abd_ordercode = 2;
    int32 abd_orderdetno = 3;
    string abd_pdinoutno = 4;
    string abd_prodcode = 5;
    string abd_custprodcode = 6; //客户物料编号
    string abd_custproddetail = 7; //客户物料名称
    string abd_custprodspec = 8; //客户物料规格
    double abd_thisvoqty = 9;
    double abd_price = 10;
    double abd_taxrate = 11;
    double abd_amount = 12;
    double abd_totalbillprice = 13;
    double abd_qty = 14;
    double abd_thisvoprice = 15;
    double abd_apamount = 16;
    double abd_noapamount = 17;
    double abd_taxamount = 18;
    string abd_remark = 19;
    double abd_invoqty = 20;
    double abd_yqty = 21;
}